# artindex

./: .replit  Home.py  README.md  pyproject.toml  requirements.txt
pages/: 1_Vaal.py  2_Haus.py  allee_clean.csv
